<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/TataBanner"
                android:layout_width="match_parent"
                android:layout_height="266dp"
                android:layout_marginTop="4dp"
                app:srcCompat="@drawable/tata_banner" />

            <TextView
                android:id="@+id/textViewProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/product"
                android:textSize="36sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/productButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="Notre nouvelle invention"
                android:onClick="actionButtonProduct"
                app:srcCompat="@drawable/produit" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-173dp">

        <Button
            android:id="@+id/buttonHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:onClick="actionButtonHelp"
            android:text="@string/help" />

        <Button
            android:id="@+id/buttonIntro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:onClick="actionButtonIntro"
            android:text="@string/introduction" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>